Bug #15706 Test case 'subselect' fails in --ps-protocol mode
Submitted: 13 Dec 2005 9:08 Modified: 28 Feb 2006 1:55
Reporter: Kristian Nielsen
Status: Closed
Category:Server: PS Severity:S3 (Non-critical)
Version:bk mysql-5.0 tree OS:Linux (Linux/x86)
Assigned to: Evgeny Potemkin Target Version:

[13 Dec 2005 9:08] Kristian Nielsen
Description:
Test case failure:

> ./mysql-test-run --ps-protocol --tmpdir=/tmp/knielsen subselect

TEST                            RESULT
-------------------------------------------------------
subselect                      [ fail ]

Errors are (from
/users/knielsen/pb/mysql-5.0/push-knielsen@mysql.com-20051213025133.info/mysql-5.0.18-stan
dard/mysql-test/var/log/mysqltest-time) :
mysqltest: At line 1989: query 'SELECT a FROM t1 GROUP BY a
HAVING a IN (SELECT c FROM t2 WHERE MAX(b)>20)' failed: 1111: Invalid use of group
function

Error is repeatable, but only occurs in --ps-protocol mode.

How to repeat:
Run test case as above
[15 Dec 2005 17:26] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/184
[21 Dec 2005 18:27] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/331
[10 Feb 2006 15:47] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2448
[15 Feb 2006 17:44] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2663
[17 Feb 2006 15:30] Evgeny Potemkin
If item->cached_table is set, find_field_in_tables() returns found field
even if it doesn't belong to current select. Because Item_field::fix_fields
doesn't expect such behaviour, reported bug occurs.

Fixed in 5.0.19, cset 1.1974.9.1
[28 Feb 2006 1:55] Paul DuBois
Unreleased version only. No changelog entry needed.